--- a/src/style/base/page.scss
+++ b/src/style/base/page.scss
@@ -1,1 +1,14 @@
 
+html {
+  background-color: $background-color-primary;
+  color: $color-text-primary;
+  height: 100%;
+
+}
+
+body {
+  height: 100%;
+
+}
+
+
