--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,4 +1,4 @@
-// @import "./settings/var.scss";
+@import "./settings/var.scss";
 
 // Import Functions
 @import "./tools/functions/_amcss.scss";
@@ -49,4 +49,4 @@
 @import "./tools/mixins/_sticky-footer.scss";
 @import "./tools/mixins/_tilted.scss";
 @import "./tools/mixins/_typographic.scss";
-// @import "./theme";
+@import "./theme";
