--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,4 +1,7 @@
+
+
 @import "./settings/var.scss";
+@import "./settings/homeVar.scss";
 
 // Import Functions
 @import "./tools/functions/_amcss.scss";
