--- a/src/style/settings/var.scss
+++ b/src/style/settings/var.scss
@@ -1,4 +1,6 @@
 
+// global var
+
 
 // Color 
 
@@ -19,8 +21,9 @@ $color-text-white: $color-white;
 // BackGround 
 $background-color-primary: #f8f8f8;
 $background-color-secondary: #8b98e2;
+$background-color-tertiary: #cccccc;
+$background-color-white: $color-white;
 
-$background-color-dark: #18191a
+$background-color-dark: #18191a;
 
 
-// $color-black: 
