--- a/src/components/searchPane/SearchPane.scss
+++ b/src/components/searchPane/SearchPane.scss
@@ -1,12 +1,18 @@
 
 
+
+@include b(search-container) {
+  padding: 6px 16px;
+}
 @include b(search) {
 
-  width: 100%;
-  border-radius: 16px;
-  height: 32px;
-  border: 1Px solid $color-secondary;
-  @include box-center($justify: false, $align: center);
+    width: 100%;
+    border-radius: 16px;
+    height: 32px;
+    font-size: 14px;
+    color: $color-text-secondary;
+    border: 1Px solid $color-secondary;
+    @include box-center($justify: false, $align: center);
 
   @include e(icon) {
     width: 20px;
