--- a/src/style/base/page.scss
+++ b/src/style/base/page.scss
@@ -7,7 +7,9 @@ html {
 body {
   height: 100%;
   @include n-background-color('background');
-  @include n-text-color('color')
+  @include n-text-color('color');
+
+  color: $color-text-primary
 }
 
 
