--- a/src/style/settings/var.scss
+++ b/src/style/settings/var.scss
@@ -15,14 +15,22 @@ $color-text-secondary:#999999;
 $color-text-tertiary: $color-secondary;
 $color-text-quaternary: #FF7528;
 $color-text-fifth: #00bc9e;
+$color-text-sixth: #666666;
+$color-text-seventh: #f60;
+$color-text-eighth: #ff4607;
+$color-text-ninth: #663c00;
+$color-text-tenth: #ae6e15;
+
 $color-text-white: $color-white;
 
 
 // BackGround 
-$background-color-primary: #f8f8f8;
+$background-color-primary: #f4f4f4;
 $background-color-secondary: #8b98e2;
 $background-color-tertiary: #cccccc;
 $background-color-white: $color-white;
+$background-color-quaternary: #ffebe3;
+$background-color-fifty: #fdefd2;
 
 $background-color-dark: #18191a;
 
