「font-size 全局化」 「机票首页开发」 「缓存封装」 「首页组件抽离」

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -5,6 +5,7 @@
 
 // Import Functions
 @import "./tools/functions/_amcss.scss";
+@import "./tools/functions/_pxTorem.scss";
 @import "./tools/functions/_convert.scss";
 @import "./tools/functions/_decimal.scss";
 @import "./tools/functions/_exponent.scss";
