--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,7 +3,8 @@
 @import "base/paragraph.scss";
 @import "base/images.scss";
 @import "base/form.scss";
-
+@import "object/font-size.scss";
+@import "object/text-align.scss";
 
 
 
