--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,6 +5,7 @@
 @import "base/form.scss";
 @import "object/font-size.scss";
 @import "object/text-align.scss";
+@import "object/while-space.scss";
 
 
 
