--- a/src/style/settings/var.scss
+++ b/src/style/settings/var.scss
@@ -37,7 +37,12 @@ $background-color-tertiary: #cccccc;
 $background-color-white: $color-white;
 $background-color-quaternary: #ffebe3;
 $background-color-fifty: #fdefd2;
-
 $background-color-dark: #18191a;
+
+
+
+// border
+
+$border-color-primary: #e4e4e4
 
 
