--- a/src/style/settings/homeVar.scss
+++ b/src/style/settings/homeVar.scss
@@ -60,9 +60,9 @@ $cardIconList: (
 
 $linearGradientFirst: linear-gradient(90deg,#fa5956,#fb8650);
 $linearGradientSecond: linear-gradient(270deg,#f8e1bd,#e2c089);
+$linearGradientThird: linear-gradient(to right, #ffb000, #fe8a18) no-repeat !important;
 
 // Home card background
-
 $card-background-other-list: (
   hotel: #fff5f1,
   fly: #eff9ff,
