--- a/src/components/flight/flyCard/FlyCard.scss
+++ b/src/components/flight/flyCard/FlyCard.scss
@@ -7,8 +7,7 @@
   background-color: $background-color-white;
   box-shadow: 0 4px 5px rgb(0 0 0 / 8%);
   border-radius: 6px;
-  margin-top: 10px;
-  padding: 20px;
+  // padding: 20px;
 
   @include e(city) {
     // font-size: pxTorem(20px);
@@ -56,9 +55,29 @@
   @include e(date) {
     @include box-center($justify: space-between)
   }
-  @include e(date-item) {
+  @include e(cabin) {
     // flex: 1;
   }
+  @include e(search) {
 
+    @include m(btn) {
+      background: $linearGradientThird;
+      border: none !important;
+      border-radius: 6px !important;
+      font-size: 20px !important;
+    }
+  }
+
+  @include e(tips-box) {
+    @include box-center($justify: false, $align: center);
+    width: 100%;
+  }
+  @include e(tips-item) {
+    width: 25%;
+    border-right: 1Px solid $border-color-primary;
+    &:last-child {
+      border-right: 0;
+    }
+  }
 }
 
