--- a/src/components/flight/flyCard/FlyCard.scss
+++ b/src/components/flight/flyCard/FlyCard.scss
@@ -5,7 +5,7 @@
 
 @include b(fly-card) {
   background-color: $background-color-white;
-  box-shadow: 0 4px 5px rgb(0 0 0 / 8%);
+  box-shadow: 0 4px 5px rgba($color: #000000, $alpha: .5);
   border-radius: 6px;
   // padding: 20px;
 
