--- a/src/style/base/link.scss
+++ b/src/style/base/link.scss
@@ -1,4 +1,11 @@
 
 a {
-  color: $color-text-primary
+  color: $color-text-primary;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
 }
