--- a/src/style/base/paragraph.scss
+++ b/src/style/base/paragraph.scss
@@ -1,5 +1,29 @@
-p {
-  margin: 0;
-  
+
+
+b,
+strong {
+  font-weight: bolder;
 }
 
+p {
+  margin: 0;
+}
+
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+
+small {
+  font-size: 80%;
+}
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
