--- a/src/style/settings/var.scss
+++ b/src/style/settings/var.scss
@@ -37,6 +37,7 @@ $background-color-tertiary: #cccccc;
 $background-color-white: $color-white;
 $background-color-quaternary: #ffebe3;
 $background-color-fifty: #fdefd2;
+$background-color-sixth: #f8f8f8;
 $background-color-dark: #18191a;
 
 
