城市组件 样式更新

--- a/src/components/ux/airportCity/AirPortCity.scss
+++ b/src/components/ux/airportCity/AirPortCity.scss
@@ -13,6 +13,7 @@
 @include b(airport-city-container) {
   height: calc(100vh - 88px);
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 @include b(airport-city) {
