日历组件 组件数据抽离

--- a/src/components/ux/airportCity/AirPortCity.scss
+++ b/src/components/ux/airportCity/AirPortCity.scss
@@ -102,6 +102,11 @@
     border: 1px solid $border-color-primary;
     border-radius: 4px;
     margin-bottom: 10px;
+
+    @include m(active) {
+      color: $color-text-tertiary;
+      border: 1px solid $color-text-tertiary;
+    }
   }
   
 }
