优化代码  移除warning

--- a/src/components/ux/cabinSelect/CabinSelect.scss
+++ b/src/components/ux/cabinSelect/CabinSelect.scss
@@ -4,8 +4,7 @@
 @include b(select-cabin) {
 
   @include e(item) {
-    @include box-center($justify: space-between)
-
+    @include box-center($justify: space-between);
     @include m(select) {
       color: $color-text-tertiary;
     }
